[package]
name = "ui"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The Air Artificial General Intelligence"
homepage = "https://github.com/LambdaAlpha/ui-doc"
repository = "https://github.com/LambdaAlpha/ui"
keywords = ["ai", "agi", "solver", "logic"]
categories = ["science"]

[[test]]
name = "main"

[lints]
workspace = true

[dependencies.airlang]
version = "0.4.0"
git = "https://github.com/LambdaAlpha/airlang_rs.git"
package = "airlang"

[dependencies.airlang_ext]
version = "0.4.0"
git = "https://github.com/LambdaAlpha/airlang_rs.git"
package = "airlang_ext"
